<resources>
    <string name="app_name">Zoo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_crear">Crear</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_creditos">Creditos</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_listar">Listar</string>

    <string name="s_id">Id</string>
    <string name="s_nombre">Nombre</string>
    <string name="s_fechaIngreso">Fecha de ingreso</string>
    <string name="s_sexo">Sexo</string>
    <string name="s_habitat">Habitat</string>
    <string name="s_alimentacion">Alimentacion</string>
    <string name="s_guardar">Guardar</string>
    <string name="s_limpiar">Limpiar</string>
    <string name="s_buscar">Buscar</string>
    <string name="s_eliminar">Eliminar</string>

    <string name="s_crear">Crear</string>
    <string name="s_altaAnimal">Alta animales</string>
    <string name="s_listarAnimal">Listar animales</string>
    <string name="s_eliminarAnimal">Eliminar animal</string>
    <string name="s_modificarAnimales">Modificar animales</string>
    <string name="s_eliminarporID">ID a eliminar</string>
</resources>
